--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
-    <title>Pomodoro Clock</title>
+    <title class="title">Pomodoro Clock</title>
+    <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
